# t-autotest

./: .gitignore  .gitmodules  .taplo.toml  Cargo.toml  LICENSE  Makefile  README.md  shell.nix
.devcontainer/: devcontainer.json
.github/workflows/: build.yaml  release.yaml  test.yaml
config/: full-example.toml  full.toml
crates/t-binding/: Cargo.toml
crates/t-binding/lang/py/: Cargo.toml  pyautotest.pyi
crates/t-binding/lang/py/src/: api.rs  lib.rs
crates/t-binding/src/: api.rs  engine.rs  error.rs  lib.rs  msg.rs
crates/t-binding/src/engine/: js.rs  lua.rs  mod.rs  py.rs  rjs.rs
crates/t-cli/: Cargo.toml
crates/t-cli/examples/: ssh.rs  vnc.rs
crates/t-cli/src/: config.rs  gui.rs  lib.rs  main.rs  needle.rs  recorder.rs  runner.rs
crates/t-cli/src/gui/: editor.rs  state.rs  util.rs  viwer.rs
crates/t-cli/src/recorder/: deque.rs  helper.rs
crates/t-config/: Cargo.toml
crates/t-config/src/: config.rs  lib.rs
crates/t-console/: .gitignore  Cargo.toml
crates/t-console/src/: event_loop.rs  evloop.rs  lib.rs  serial.rs  ssh.rs  term.rs  vnc.rs
crates/t-console/src/base/: evloop.rs  mod.rs  pty.rs  tty.rs
crates/t-console/src/evloop/: serial.rs  ssh.rs  text_console.rs
crates/t-console/src/vnc/: client.rs  data.rs  pixel.rs
crates/t-lib/: Cargo.toml
crates/t-lib/src/: lib.rs
crates/t-lib/src/console/: mod.rs  serial.rs  ssh.rs
crates/t-lib/src/console/vnc/: client.rs  data.rs  mod.rs  pixel.rs
crates/t-lib/src/script_engine/: mod.rs
crates/t-runner/: Cargo.toml
crates/t-runner/src/: driver.rs  driver_for_script.rs  engine.rs  error.rs  lib.rs  needle.rs  runner.rs  serial.rs  server.rs  ssh.rs
crates/t-util/: Cargo.toml
crates/t-util/src/: lib.rs  vt100.raw
doc/: arch.md
scripts/: install-linux.sh  install.ps1  install.sh
