[workspace]
resolver = "2"
members = [
    "crates/t-cli",
    "crates/t-runner",
    "crates/t-binding",
    "crates/t-binding/lang/*",
    "crates/t-console",
    "crates/t-vnc",
    "crates/t-util",
    "crates/t-config",
]

[workspace.package]
version       = "0.3.0"
description   = "autotest tool"
authors       = ["trdthg"]
edition       = "2021"
license       = "MIT"
repository    = "https://github.com/trdthg/t-autotest"
homepage      = "https://github.com/trdthg/t-autotest"
documentation = "https://github.com/trdthg/t-autotest"

[workspace.dependencies]
# Crates
t-runner  = { path = "./crates/t-runner" }
t-console = { path = "./crates/t-console" }
t-vnc     = { path = "./crates/t-vnc" }
t-util    = { path = "./crates/t-util" }
t-binding = { path = "./crates/t-binding" }
t-config  = { path = "./crates/t-config" }

# Dep
clap               = { version = "4.4.11", features = ["derive", "cargo"] }
dotenv             = { version = "0.15.0" }
home               = { version = "0.5.9" }
tracing            = { version = "0.1.40" }
tracing-test       = { version = "0.2.4" }
tracing-subscriber = { version = "0.3.18" }
pipe-trait         = { version = "0.4.0" }
shell-escape       = { version = "0.1.5" }
regex              = { version = "1.10.2" }
nanoid             = { version = "0.4.0" }
tempfile           = { version = "3.9.0" }
serde              = { version = "1.0.194", features = ["derive"] }
serde_json         = { version = "1.0.111" }
toml               = { version = "0.8.8" }
ssh2               = { version = "0.9.4", features = [] }
serialport         = { version = "4.3.0" }
vt100              = { version = "0.15.2" }
console            = { version = "0.15.8" }
image              = { version = "0.24.7" }
png                = { version = "0.17.10" }
byteorder          = { version = "1.5.0" }
parking_lot        = { version = "0.12.1" }
unescaper          = { version = "0.1.4" }

rquickjs = { version = "0.5.1", features = ["macro"] }
mlua     = { version = "0.9.1", features = ["lua54", "vendored"] }
pyo3     = { version = "0.20.0", features = ["auto-initialize", "abi3-py37"] }
ctrlc    = { version = "3.4.2" }

[profile.dev]
incremental = true
