[package]
name                    = "t-binding"
version                 = "0.1.0"
description.workspace   = true
authors.workspace       = true
edition.workspace       = true
license.workspace       = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
t-console = { workspace = true }
t-config  = { workspace = true }

tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
rquickjs           = { workspace = true }
mlua               = { workspace = true }
pyo3               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
toml               = { workspace = true }
regex              = { workspace = true }
