[package]
name                    = "t-config"
version.workspace       = true
description.workspace   = true
authors.workspace       = true
edition.workspace       = true
license.workspace       = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
t-util = { workspace = true }

serde = { workspace = true }
toml  = { workspace = true }
