[package]
name                    = "t-console"
version                 = "0.1.0"
description.workspace   = true
authors.workspace       = true
edition.workspace       = true
license.workspace       = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
t-vnc    = { workspace = true }
t-util   = { workspace = true }
t-config = { workspace = true }

tracing            = { workspace = true }
tracing-test       = { workspace = true }
tracing-subscriber = { workspace = true }
clap               = { workspace = true }
dotenv             = { workspace = true }
home               = { workspace = true }
anyhow             = { workspace = true }
tempfile           = { workspace = true }
ssh2               = { workspace = true }
serialport         = { workspace = true }
vt100              = { workspace = true }
nanoid             = { workspace = true }
image              = { workspace = true }
png                = { workspace = true }
byteorder          = { workspace = true }
strip-ansi-escapes = { workspace = true }
