[package]
name                    = "t-runner"
version.workspace       = true
description.workspace   = true
authors.workspace       = true
edition.workspace       = true
license.workspace       = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
t-console = { workspace = true }
t-vnc     = { workspace = true }
t-binding = { workspace = true }
t-util    = { workspace = true }
t-config  = { workspace = true }

tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
clap               = { workspace = true }
dotenv             = { workspace = true }
home               = { workspace = true }
pipe-trait         = { workspace = true }
shell-escape       = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
toml               = { workspace = true }
ssh2               = { workspace = true }
image              = { workspace = true }
png                = { workspace = true }
parking_lot        = { workspace = true }
nanoid             = { workspace = true }
atty               = { workspace = true }
