[package]
name                    = "pyautotest"
version.workspace       = true
description.workspace   = true
authors.workspace       = true
edition.workspace       = true
license.workspace       = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.maturin]
name = "pyautotest"

[lib]
name       = "pyautotest"
crate-type = ["cdylib"]

[dependencies]
t-binding = { workspace = true }
t-config  = { workspace = true }
t-console = { workspace = true }
t-runner  = { workspace = true }

tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
pyo3               = { workspace = true }
ctrlc              = { workspace = true }
